<resources>
	<string name="app_name">InvenFinder</string>

	<string name="item">Item</string>
	<string name="inventory">Inventory</string>
	<string name="inventory_empty">Your inventory is empty! Add some items and they will appear here</string>
	<string name="search_empty">Nothing found. Try adjusting your search</string>
	<string name="item_not_provided">Oh no, we\'ve lost your item! There is an error in the app</string>
	<string name="login_failed">Failed to sign in, please check your credentials</string>
	<string name="logout_failed">Failed to sign out, please check your internet connection</string>
	<string name="items_deleted">%1$s items have been recently deleted. Do you want to restore them?</string>
	<string name="attention">Attention!</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="more_details">More details</string>
	<string name="all_items">All items</string>
	<string name="item_details">Item details</string>
	<string name="add_item">Add item</string>
	<string name="edit_item">Edit item</string>
	<string name="remove_item">Remove item</string>
	<string name="settings">Settings</string>
	<string name="cancel">Cancel</string>
	<string name="search">Search</string>
	<string name="location">Location</string>
	<string name="amount">Amount</string>
	<string name="available">Available</string>
	<string name="name">Name</string>
	<string name="description">Description</string>
	<string name="link">Link</string>
	<string name="connection_settings">Connection settings</string>
	<string name="url">URL</string>
	<string name="host">Host</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="url_hint">invenfinder.example.com</string>
	<string name="user_hint">user</string>
	<string name="password_hint">password</string>
	<string name="test">Test</string>
	<string name="connect">Connect</string>
	<string name="save">Save</string>
	<string name="sign_in">Sign in</string>
	<string name="sign_out">Sign out</string>
	<string name="add">Add</string>
	<string name="remove">Remove</string>
	<string name="submit">Submit</string>
	<string name="database">Database</string>
	<string name="database_connection">Database connection</string>
	<string name="location_hint">1-A1</string>
	<string name="amount_hint">0</string>
	<string name="checking_e">Checking…</string>
	<string name="signing_in_e">Signing in…</string>
	<string name="signing_out_e">Signing out…</string>
	<string name="signed_in">Signed in</string>
	<string name="not_signed_in">Not signed in</string>
	<string name="take_from_storage">Take from storage</string>
	<string name="put_in_storage">Put in storage</string>
	<string name="choose_amount">Choose amount</string>
	<string name="name_cannot_be_empty">Name cannot be empty</string>
	<string name="location_is_invalid">Location is invalid</string>
	<string name="remove_confirm">Are you sure you want to remove this item?</string>

	<!--	<string name="arg">Hello second fragment. Arg: %1$s</string>-->
</resources>
