<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<Toolbar
		android:id="@+id/toolbar"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="?attr/colorAccent"
		android:minHeight="?attr/actionBarSize"
		android:title="@string/item_details"
		android:titleTextColor="?attr/colorOnAccent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/remove_button"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/remove"
		android:src="@drawable/trash_bin"
		app:layout_constraintBottom_toBottomOf="@+id/toolbar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/toolbar" />

	<ImageView
		android:id="@+id/edit_button"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="16dp"
		android:adjustViewBounds="true"
		android:contentDescription="@string/edit_item"
		android:src="@drawable/pen"
		app:layout_constraintBottom_toBottomOf="@+id/toolbar"
		app:layout_constraintEnd_toStartOf="@+id/remove_button"
		app:layout_constraintTop_toTopOf="@+id/toolbar" />

	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
		android:id="@+id/refresh_layout"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/toolbar">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/details_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/component_location"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:fontFamily="sans-serif-black"
				android:gravity="bottom"
				android:includeFontPadding="false"
				android:text="@string/location_hint"
				android:textColor="?attr/colorForeground"
				android:textSize="108sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="@+id/details_layout" />

			<TextView
				android:id="@+id/component_amount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:fontFamily="sans-serif-medium"
				android:text="@string/amount_hint"
				android:textColor="?attr/colorForeground"
				android:textSize="20sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/component_location" />

			<TextView
				android:id="@+id/component_name"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="16dp"
				android:text="@string/name"
				android:textColor="?attr/colorForeground"
				android:textSize="24sp"
				app:layout_constraintEnd_toStartOf="@+id/amount_image"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/amount_image" />

			<TextView
				android:id="@+id/component_description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:text="@string/description"
				android:textColor="?attr/colorForeground"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/component_name" />

			<TextView
				android:id="@+id/component_link"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:text="@string/link"
				android:textColor="?attr/colorForeground"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/component_description" />

			<ImageView
				android:id="@+id/location_image"
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="16dp"
				android:layout_marginEnd="16dp"
				android:layout_marginBottom="16dp"
				android:adjustViewBounds="true"
				android:contentDescription="@string/location"
				android:src="@drawable/shelf"
				app:layout_constraintBottom_toBottomOf="@+id/component_location"
				app:layout_constraintEnd_toStartOf="@+id/component_location"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/component_location" />

			<ImageView
				android:id="@+id/amount_image"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_marginEnd="16dp"
				android:adjustViewBounds="true"
				android:contentDescription="@string/amount"
				android:src="@drawable/warehouse"
				app:layout_constraintBottom_toBottomOf="@+id/component_amount"
				app:layout_constraintEnd_toStartOf="@+id/component_amount"
				app:layout_constraintTop_toTopOf="@+id/component_amount" />

			<ImageView
				android:id="@+id/take_button"
				android:layout_width="wrap_content"
				android:layout_height="80dp"
				android:layout_marginTop="16dp"
				android:adjustViewBounds="true"
				android:contentDescription="@string/take_from_storage"
				android:src="@drawable/remove_stock"
				app:layout_constraintEnd_toStartOf="@+id/put_button"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/component_link" />

			<TextView
				android:id="@+id/take_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/take_from_storage"
				android:textColor="?attr/colorMuted"
				app:layout_constraintEnd_toEndOf="@+id/take_button"
				app:layout_constraintStart_toStartOf="@+id/take_button"
				app:layout_constraintTop_toBottomOf="@+id/take_button" />

			<ImageView
				android:id="@+id/put_button"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:adjustViewBounds="true"
				android:contentDescription="@string/put_in_storage"
				android:src="@drawable/add_stock"
				app:layout_constraintBottom_toBottomOf="@+id/take_button"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.5"
				app:layout_constraintStart_toEndOf="@+id/take_button"
				app:layout_constraintTop_toTopOf="@+id/take_button" />

			<TextView
				android:id="@+id/put_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/put_in_storage"
				android:textColor="?attr/colorMuted"
				app:layout_constraintEnd_toEndOf="@+id/put_button"
				app:layout_constraintStart_toStartOf="@+id/put_button"
				app:layout_constraintTop_toBottomOf="@+id/put_button" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>